# sonatina

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  test_all.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: backend.rs  bitset.rs  cache.rs  cdg.rs  cfg.rs  cfg_edit.rs  cfg_scc.rs  compile.rs  contract.rs  critical_edge.rs  domtree.rs  lib.rs  liveness.rs  loop_analysis.rs  module.rs  module_analysis.rs  module_linker.rs  post_domtree.rs  range_analysis.rs  stackalloc.rs  stackify_edge.rs  structurize.rs  type_rewrite.rs
crates/codegen/src/analysis/: demanded_bits.rs  func_behavior.rs  induction.rs  known_bits.rs  memory_access.rs  mod.rs  scalar_facts.rs
crates/codegen/src/interpret/: arith.rs  cast.rs  cmp.rs  logic.rs  mod.rs
crates/codegen/src/ir/: bigint.rs  dfg.rs  func_cursor.rs  function.rs  i256.rs  insn.rs  ir_writer.rs  layout.rs  mod.rs  module.rs  types.rs  value.rs
crates/codegen/src/isa/: evm.rs  mod.rs
crates/codegen/src/isle/: ir.isle  mod.rs  prelude.isle
crates/codegen/src/machinst/: assemble.rs  lower.rs  mod.rs  vcode.rs
crates/codegen/src/object/: artifact.rs  compile.rs  data.rs  error.rs  evm_backend.rs  link.rs  mod.rs  resolve.rs
crates/codegen/src/optim/: adce.rs  branch_canonicalize.rs  call_purity.rs  cfg_cleanup.rs  checked_arith_elim.rs  code_sink.rs  const_eval.rs  constant_folding.rs  constref_specialize.rs  dead_arg.rs  dead_func.rs  gvn.rs  immediate_impl.rs  inliner.rs  insn_simplify.rs  interner.rs  known_bits_simplify.rs  licm.rs  load_store.rs  loop_strength_reduce.rs  mod.rs  multi_result_legalize.rs  pipeline.rs  range_branch_simplify.rs  scalar_canonicalize.rs  sccp.rs  sccp_simplify.rs  signature_rewrite.rs  simplify_expr.rs  simplify_impl.rs  uniform_const_arg.rs
crates/codegen/src/stackalloc/: edge_sets.rs  edge_split.rs  local_stack.rs  mod.rs  simple.rs
crates/codegen/src/transform/: mod.rs
crates/codegen/test_files/egraph/: compound_ref_types.snap  compound_ref_types.sntn  const_i256.snap  const_i256.sntn  simple.snap  simple.sntn
crates/codegen/test_files/enum_lowering/: object_ops.snap  object_ops.sntn  value_ops.snap  value_ops.sntn
crates/codegen/test_files/evm/: add.snap  add.sntn  add.sona  aggregate_legalize.opt_ir.snap  aggregate_legalize.snap  aggregate_legalize.sntn  aggregate_legalize_bitcast.snap  aggregate_legalize_bitcast.sntn  aggregate_legalize_dynamic_array_index.snap  aggregate_legalize_dynamic_array_index.sntn  aggregate_legalize_noopt.snap  aggregate_legalize_noopt.sntn  aggregate_loop_carried_pair_insert_regression.opt_ir.snap  aggregate_loop_carried_pair_insert_regression.snap  aggregate_loop_carried_pair_insert_regression.sntn  alloca_diamond_reuse.snap  alloca_diamond_reuse.sntn  alloca_loop_reuse.snap  alloca_loop_reuse.sntn  alloca_mem.snap  alloca_mem.sntn  arena_alloc_recursion_spills.snap  arena_alloc_recursion_spills.sntn  arena_alloc_spills.snap  arena_alloc_spills.sntn  arena_base_explicit_absolute_layout.snap  arena_base_explicit_absolute_layout.sntn  arena_base_msize_no_legacy.snap  arena_base_msize_no_legacy.sntn  arena_base_unknown_access_legacy_floor.snap  arena_base_unknown_access_legacy_floor.sntn  array_iter_reverse.opt_ir.snap  array_iter_reverse.snap  array_iter_reverse.sntn  backedge_prefer.snap  backedge_prefer.sntn  bitcast_narrow_bug.snap  bitcast_narrow_bug.sntn  br_table.snap  br_table.sntn  (+300 more)
crates/codegen/test_files/inliner/: call_once_large.snap  call_once_large.sntn  const_return.snap  const_return.sntn  identity.snap  identity.sntn  inline_evm_revert.snap  inline_evm_revert.sntn  inline_evm_revert_chain.snap  inline_evm_revert_chain.sntn  inline_evm_revert_dead_tail.snap  inline_evm_revert_dead_tail.sntn  malformed_call_result_void_callee.snap  malformed_call_result_void_callee.sntn  noop.snap  noop.sntn  reject_effectful.snap  reject_effectful.sntn  reject_multi_block.snap  reject_multi_block.sntn  splice_pure.snap  (+7 more)
crates/codegen/tests/: common.rs  cranelift_backend.rs  egraph.rs  enum_lowering.rs  evm.rs  evm_directives.rs  evm_legalize.rs  inliner.rs  linker.rs  mandelbrot_ascii.rs  mandelbrot_dump.rs  mandelbrot_full_relay.rs  mandelbrot_gpu_relay.rs  mandelbrot_relay.rs  mandelbrot_relay_render.rs  mandelbrot_snapshot.rs  module_analysis.rs  object_abi.rs  object_load_store.rs  object_lowering.rs  opt_pipeline.rs  spirv_backend.rs  wasm_backend.rs
crates/filecheck/: Cargo.toml
crates/filecheck/fixtures/: infinite_loop.sntn
crates/filecheck/src/: adce.rs  aggregate_combine.rs  aggregate_scalarize.rs  branch_canonicalize.rs  cfg_cleanup.rs  checked_arith_elim.rs  code_sink.rs  egraph.rs  gvn.rs  insn_simplify.rs  known_bits_simplify.rs  lib.rs  licm.rs  load_store.rs  loop_strength_reduce.rs  main.rs  range_branch_simplify.rs  sccp.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: frame.rs  lib.rs  machine.rs  pc.rs  state.rs  types.rs  value.rs
crates/interpreter/test_files/: arith.sntn  call.sntn  control_flow.sntn  data.sntn  gep.sntn  insert_value.sntn  multi_result.sntn
crates/interpreter/tests/: common.rs  test.rs
crates/ir/: Cargo.toml
crates/ir/src/: bigint.rs  bitset.rs  cfg.rs  content_address.rs  debug.rs  debug_tags.rs  dfg.rs  dfg_.rs  effects.rs  func_cursor.rs  function.rs  function_.rs  global_variable.rs  insn.rs  inst.rs  ir_writer.rs  layout.rs  lib.rs  linkage.rs  module.rs  module_linker.rs  object.rs  trace_view.rs  types.rs  value.rs  value_.rs  visitor.rs
crates/ir/tests/: linker.rs
crates/macros/: Cargo.toml
crates/macros/src/: inst.rs  inst_group.rs  inst_prop.rs  inst_set.rs  inst_set_base.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  objects.rs  parser.rs  sonatina.pest  syntax.rs
crates/parser/tests/: errors.rs  syntax.rs
crates/triple/: Cargo.toml
crates/triple/src/: lib.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: config.rs  ctx.rs  diagnostic.rs  error_stack.rs  lib.rs  pass.rs  pipeline.rs  report.rs  verify.rs
crates/verifier/tests/: verifier.rs
(+605 files in other folders)
