[package]
name = "sonatina-cli"
version = "0.0.3-alpha"
edition.workspace = true
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/cli"
repository = "https://github.com/fe-lang/sonatina"
description = "Command-line interface for Sonatina"
publish = false

[[bin]]
name = "sonatina"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indexmap = "2.12"
sonatina-codegen = { path = "../codegen", version = "0.0.3-alpha" }
sonatina-ir = { path = "../ir", version = "0.0.3-alpha" }
sonatina-parser = { path = "../parser", version = "0.0.3-alpha" }
sonatina-triple = { path = "../triple", version = "0.0.3-alpha" }
sonatina-verifier = { path = "../verifier", version = "0.0.3-alpha" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "registry"] }
