[package]
name = "sonatina-codegen"
version = "0.0.3-alpha"
edition = "2021"
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/codegen"
repository = "https://github.com/fe-lang/sonatina"
description = "High-performance code generator for smart contract"
categories = ["compilers", "wasm"]
keywords = ["compiler", "evm", "wasm", "smart-contract"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-entity = "0.117"
smallvec = "1.7.0"
rustc-hash = "2.0.0"
sonatina-ir = { path = "../ir", version = "0.0.3-alpha" }
sonatina-triple = { path = "../triple", version = "0.0.3-alpha" }
sonatina-macros = { path = "../macros", version = "0.0.3-alpha" }
dashmap = { version = "6.1", features = ["rayon"] }
indexmap = { version = "2.0" }

[dev-dependencies]
sonatina-parser = { path = "../parser", version = "0.0.3-alpha" }
insta = "1.41"
dir-test = "0.4"
