[package]
name = "sonatina-codegen"
version = "0.0.3-alpha"
edition.workspace = true
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/codegen"
repository = "https://github.com/fe-lang/sonatina"
description = "High-performance code generator for smart contract"
categories = ["compilers", "wasm"]
keywords = ["compiler", "evm", "wasm", "smart-contract"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-entity = "0.126"
smallvec = "1.15.1"
rustc-hash = "2.0.0"
sonatina-ir = { path = "../ir", version = "0.0.3-alpha" }
sonatina-triple = { path = "../triple", version = "0.0.3-alpha" }
sonatina-macros = { path = "../macros", version = "0.0.3-alpha" }
sonatina-verifier = { path = "../verifier", version = "0.0.3-alpha" }
dashmap = { version = "6.1", features = ["rayon"] }
egglog = { git = "https://github.com/sbillig/egglog", rev = "1fec7bbde04e1ac0d503aea0d1e1e9183c1524ef" }
bit-set = "0.8.0"
indexmap = { version = "2.12" }

[dev-dependencies]
hex = "0.4.3"
insta = "1.43"
dir-test = "0.4"
derive_more = { version = "1", default-features = false, features = ["full"] }
revm = { version = "18.0.0", default-features = false, features = ["std"] }
sonatina-parser = { path = "../parser", version = "0.0.3-alpha" }
