[package]
name = "sonatina-codegen"
version = "0.0.3-alpha"
edition.workspace = true
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/codegen"
repository = "https://github.com/fe-lang/sonatina"
description = "High-performance code generator for smart contract"
categories = ["compilers", "wasm"]
keywords = ["compiler", "evm", "wasm", "smart-contract"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-entity = "0.126"
cranelift-codegen = { version = "0.126", optional = true }
cranelift-frontend = { version = "0.126", optional = true }
cranelift-module = { version = "0.126", optional = true }
cranelift-jit = { version = "0.126", optional = true }
cranelift-native = { version = "0.126", optional = true }
cranelift-object = { version = "0.126", optional = true }
wasm-encoder = { version = "0.227", optional = true }
smallvec = "1.15.1"
rustc-hash = "2.0.0"
sonatina-ir = { path = "../ir", version = "0.0.3-alpha" }
sonatina-triple = { path = "../triple", version = "0.0.3-alpha" }
sonatina-macros = { path = "../macros", version = "0.0.3-alpha" }
sonatina-verifier = { path = "../verifier", version = "0.0.3-alpha" }
dashmap = { version = "6.1", features = ["rayon"] }
rayon = { version = "1" }
bit-set = "0.8.0"
indexmap = { version = "2.12" }
tracing = "0.1"
vec-collections = { version = "0.4.3", default-features = false }
rspirv = { version = "0.13.0", optional = true }
spirv = { version = "0.4.0", optional = true }
waffle = { version = "0.2", optional = true }
naga = { version = "29", features = ["spv-out", "wgsl-out"], optional = true }

[features]
cranelift = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:cranelift-object",
]
wasm = ["dep:waffle", "dep:wasm-encoder"]
spirv-backend = ["dep:naga"]

[dev-dependencies]
hex = "0.4.3"
insta = "1.43"
dir-test = "0.4"
derive_more = { version = "1", default-features = false, features = ["full"] }
revm = { version = "18.0.0", default-features = false, features = ["std"] }
sonatina-parser = { path = "../parser", version = "0.0.3-alpha" }
wasmtime = "44.0.1"
wasmparser = "0.248.0"
wgpu = { version = "29", features = ["vulkan-portability"] }
pollster = "0.4.0"

[[test]]
name = "cranelift_backend"
required-features = ["cranelift"]
