[package]
name = "sonatina-filecheck"
version = "0.0.2-alpha"
edition = "2021"
authors = ["Sonatina Developers"]
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filecheck = "0.5.0"
sonatina-ir = {path = "../ir"}
sonatina-codegen = {path = "../codegen"}
sonatina-parser = {path = "../parser"}
termcolor = "1.1.2"
walkdir = "2"
