[package]
name = "sonatina-filecheck"
version = "0.0.3-alpha"
edition = "2021"
authors = ["Sonatina Developers"]
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filecheck = "0.5.0" # { path = "/Users/sean/src/filecheck" }
sonatina-ir = { path = "../ir" }
sonatina-codegen = { path = "../codegen" }
sonatina-parser2 = { path = "../parser2" }
termcolor = "1.1.2"
walkdir = "2"
