[package]
name = "sonatina-ir"
version = "0.0.3-alpha"
edition = "2021"
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/ir"
repository = "https://github.com/fe-lang/sonatina"
description = "Intermediate representation for sonatina code generator"
categories = ["compilers", "wasm"] 
keywords = ["compiler", "evm", "wasm", "smart-contract"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.12", default-features = false }
cranelift-entity = "0.97"
smallvec = "1.7.0"
fxhash = "0.2.1"
dyn-clone = "1.0.4"
sonatina-triple = { path = "../triple", version = "0.0.3-alpha" }
indexmap = "2.0.0"
dot2 = { git = "https://github.com/sanpii/dot2.rs.git" }
id-arena = "2.2.1"
