[package]
name = "sonatina-ir"
version = "0.0.3-alpha"
edition = "2021"
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/ir"
repository = "https://github.com/fe-lang/sonatina"
description = "Intermediate representation for sonatina code generator"
categories = ["compilers", "wasm"]
keywords = ["compiler", "evm", "wasm", "smart-contract"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.13", default-features = false }
cranelift-entity = "0.123"
smallvec = "1.15.1"
rustc-hash = "2.0.0"
sonatina-triple = { path = "../triple", version = "0.0.3-alpha" }
macros = { package = "sonatina-macros", path = "../macros", version = "0.0.3-alpha" }
indexmap = "2.11.4"
dot2 = { git = "https://github.com/sanpii/dot2.rs.git" }
dashmap = { version = "6.1", features = ["rayon"] }
rayon = { version = "1" }
dyn-clone = "1.0"

[dev-dependencies]
sonatina-parser = { path = "../parser", version = "0.0.3-alpha" }
insta = { version = "1.43" }
