[package]
name = "sonatina-ir"
version = "0.0.3-alpha"
edition.workspace = true
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/ir"
repository = "https://github.com/fe-lang/sonatina"
description = "Intermediate representation for sonatina code generator"
categories = ["compilers", "wasm"]
keywords = ["compiler", "evm", "wasm", "smart-contract"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.14", default-features = false }
cranelift-entity = "0.126"
smallvec = "1.15.1"
rustc-hash = "2.0.0"
sonatina-triple = { path = "../triple", version = "0.0.3-alpha" }
macros = { package = "sonatina-macros", path = "../macros", version = "0.0.3-alpha" }
indexmap = "2.12.1"
dot2 = { git = "https://github.com/sanpii/dot2.rs.git" }
dashmap = { version = "6.1", features = ["rayon"] }
rayon = { version = "1" }
dyn-clone = "1.0"
smol_str = "0.3.1"

[dev-dependencies]
sonatina-parser = { path = "../parser", version = "0.0.3-alpha" }
insta = { version = "1.43" }
