[package]
name = "sonatina-parser"
version = "0.0.3-alpha"
edition = "2021"
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/parser"
repository = "https://github.com/fe-lang/sonatina"
description = "Parser for sonatina-ir text format"
categories = ["compilers", "parser", "wasm"]
keywords = ["compiler", "evm", "wasm", "smart-contract"]

[dependencies]
ir = { package = "sonatina-ir", path = "../ir", version = "0.0.3-alpha" }
sonatina-triple = { path = "../triple", version = "0.0.3-alpha" }
cranelift-entity = "0.111"
pest = "2.7.10"
pest_derive = "2.7.10"
smol_str = "0.2.2"
hex = "0.4.3"
either = { version = "1.12.0", default-features = false }
annotate-snippets = "0.11.4"
rustc-hash = "2.0.0"
bimap = "0.6.3"
derive_more = { version = "=1.0.0", default-features = false, features = ["debug"] }
smallvec = "1.13.2"

[dev-dependencies]
dir-test = "0.3"
insta = { version = "1.38.0" }
indenter = "0.3.3"
