[package]
name = "sonatina-parser"
version = "0.0.3-alpha"
edition = "2021"
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/parser"
repository = "https://github.com/fe-lang/sonatina"
description = "Parser for sonatina-ir text format"
categories = ["compilers", "parser", "wasm"]
keywords = ["compiler", "evm", "wasm", "smart-contract"]

[dependencies]
ir = { package = "sonatina-ir", path = "../ir", version = "0.0.3-alpha" }
sonatina-triple = { path = "../triple", version = "0.0.3-alpha" }
cranelift-entity = "0.126"
pest = "2.7.10"
pest_derive = "2.8.3"
smol_str = "0.3.4"
hex = "0.4.3"
either = { version = "1.12.0", default-features = false }
annotate-snippets = "0.12.10"
rustc-hash = "2.0.0"
bimap = "0.6.3"
derive_more = { version = "=2.0.1", default-features = false, features = [
    "debug",
] }
smallvec = "1.15.1"

[dev-dependencies]
dir-test = "0.4"
insta = { version = "1.43" }
indenter = "0.3.4"
