[package]
name = "sonatina-triple"
version = "0.0.3-alpha"
edition.workspace = true
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/triple"
repository = "https://github.com/fe-lang/sonatina"
description = "Target triple for smart contract"
categories = ["compilers", "wasm"] 
keywords = ["compiler", "evm", "wasm", "smart-contract"]


[dependencies]
thiserror = "2.0"
