[package]
name = "sonatina-verifier"
version = "0.0.3-alpha"
edition.workspace = true
authors = ["Sonatina Developers"]
license = "Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/fe-lang/sonatina/tree/main/crates/verifier"
repository = "https://github.com/fe-lang/sonatina"
description = "Verifier for sonatina intermediate representation"
categories = ["compilers", "wasm"]
keywords = ["compiler", "evm", "wasm", "smart-contract"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sonatina-ir = { path = "../ir", version = "0.0.3-alpha" }
sonatina-parser = { path = "../parser", version = "0.0.3-alpha" }
sonatina-triple = { path = "../triple", version = "0.0.3-alpha" }
cranelift-entity = "0.126"
rustc-hash = "2.0.0"
smallvec = "1.15.1"
rayon = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
verify-ir = []
serde = ["dep:serde", "dep:serde_json"]
